force-app/main/default/objects/Shadow_Case__c/Shadow_Case__c.object-meta.xml
<CustomObject>
    <description>Tracks limited details of a case so that it can be exposed across record sharing rules.</description>
    <label>Compliance Case</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Case View ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>