force-app/main/default/objects/Shadow_Case__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Id, Related_Case__r.CaseNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case</label>
    <type>Text</type>
</CustomField>