force-app/main/default/objects/Shadow_Case__c/fields/MLS_Number__c.field-meta.xml
<CustomField>
    <fullName>MLS_Number__c</fullName>
    <formula>Related_Case__r.MLS_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MLS Number</label>
    <type>Text</type>
</CustomField>