force-app/main/default/objects/Shadow_Case__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Case record being shadowed by this object.</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Shadow_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>