force-app/main/default/objects/Shadow_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Related_Case__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Category__c</columns>
    <columns>Case_Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>